[gd_scene load_steps=3 format=3 uid="uid://bhddc3mkgrqo8"]

[ext_resource type="PackedScene" uid="uid://bftoqrr5fer6b" path="res://scenes/bubble.tscn" id="1_2dkt7"]
[ext_resource type="Script" path="res://scripts/moving_bubble.gd" id="2_op5hq"]

[node name="Bubble" instance=ExtResource("1_2dkt7")]
collision_layer = 1
script = ExtResource("2_op5hq")
x_speed = 5.0
y_speed = 20.0

[node name="LifeTimer" type="Timer" parent="." index="2"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="." index="3"]
autostart = true

[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
